[gd_scene load_steps=6 format=3 uid="uid://b6kox24q10brx"]

[ext_resource type="Script" path="res://scripts/level_v_3.gd" id="1_2btmd"]
[ext_resource type="PackedScene" uid="uid://drnys0gd6y2ug" path="res://scenes/scenario.tscn" id="2_qe48i"]
[ext_resource type="PackedScene" uid="uid://ctgfs5wng6v2p" path="res://scenes/monster.tscn" id="3_wrdwm"]
[ext_resource type="PackedScene" uid="uid://eegpf7tycsqx" path="res://scenes/page.tscn" id="4_i3tmg"]
[ext_resource type="PackedScene" uid="uid://dlnun7e6rvtdi" path="res://scenes/collectible.tscn" id="5_kkdm1"]

[node name="Level_V3" type="Node3D"]
top_level = true
script = ExtResource("1_2btmd")

[node name="PendantSource" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -15.3487, 0.778806, 15.04)

[node name="SpawnPointHolder" type="Node3D" parent="."]

[node name="SP1" type="Node3D" parent="SpawnPointHolder"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 21.1574, 0.800192, -34.9664)

[node name="SP2" type="Node3D" parent="SpawnPointHolder"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -15.3487, 0.778806, 15.04)

[node name="PlayerHolder" type="Node3D" parent="."]
transform = Transform3D(1, 0, -7.45058e-09, -1.49012e-08, 1, 0, 2.23517e-08, 0, 1, 0, 4.76837e-07, 0)

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(-0.866024, -0.433016, 0.250001, 0, 0.499998, 0.866027, -0.500003, 0.75, -0.43301, -7.33922, 7.13026, 4.41469)
visible = false
shadow_enabled = true

[node name="scenario" parent="." instance=ExtResource("2_qe48i")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 41.5456, 0, -65.4663)

[node name="page" parent="." instance=ExtResource("4_i3tmg")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -18.5, -1.73253, 0)

[node name="StaticBody3D" parent="." instance=ExtResource("5_kkdm1")]
transform = Transform3D(0.15, 0, 0, 0, 0.15, 0, 0, 0, 0.15, -13.8375, 0.626637, 0)

[node name="Monster" parent="." instance=ExtResource("3_wrdwm")]
transform = Transform3D(-1.74846e-09, 0, -0.04, 0, 0.04, 0, 0.04, 0, -1.74846e-09, 0, 0.450041, 0)

[node name="Monster5" parent="." instance=ExtResource("3_wrdwm")]
transform = Transform3D(-1.74846e-09, 0, -0.04, 0, 0.04, 0, 0.04, 0, -1.74846e-09, -51.824, 0.450041, 28.6042)

[node name="Monster4" parent="." instance=ExtResource("3_wrdwm")]
transform = Transform3D(-1.74846e-09, 0, -0.04, 0, 0.04, 0, 0.04, 0, -1.74846e-09, 0, 0.450041, 48.6168)

[node name="Monster3" parent="." instance=ExtResource("3_wrdwm")]
transform = Transform3D(-1.74846e-09, 0, -0.04, 0, 0.04, 0, 0.04, 0, -1.74846e-09, 36.0551, 0.450041, -11.4883)

[node name="Monster2" parent="." instance=ExtResource("3_wrdwm")]
transform = Transform3D(-1.74846e-09, 0, -0.04, 0, 0.04, 0, 0.04, 0, -1.74846e-09, 30.5302, 0.450041, 19.5323)
